# BLDC_ros_controller

./: CMakeLists.txt  LICENSE.md  OpenBLDC.7z  README.md
eclipse_settings/bldc/: .cproject  .project
lib/arduino-softpwm/: keywords.txt
lib/lbr/: SnapEDA-Library.lbr
lib/ros_lib/actionlib/: TestRequestGoal.h
lib/ros_lib/actionlib_msgs/: GoalID.h  GoalStatus.h
lib/ros_lib/base_local_planner/: Position2DInt.h
lib/ros_lib/bond/: Status.h
lib/ros_lib/control_msgs/: FollowJointTrajectoryAction.h  FollowJointTrajectoryActionResult.h  FollowJointTrajectoryFeedback.h  FollowJointTrajectoryResult.h  JointTolerance.h  JointTrajectoryControllerState.h  PointHeadGoal.h  QueryTrajectoryState.h
lib/ros_lib/costmap_2d/: VoxelGrid.h
lib/ros_lib/diagnostic_msgs/: DiagnosticArray.h  DiagnosticStatus.h  KeyValue.h  SelfTest.h
lib/ros_lib/driver_base/: ConfigString.h  ConfigValue.h
lib/ros_lib/dynamic_reconfigure/: BoolParameter.h  DoubleParameter.h  Group.h  GroupState.h  IntParameter.h  ParamDescription.h  StrParameter.h
lib/ros_lib/gazebo_msgs/: ApplyBodyWrench.h  ApplyJointEffort.h  BodyRequest.h  ContactState.h  DeleteModel.h  GetJointProperties.h  GetLinkProperties.h  GetLinkState.h  GetModelProperties.h  GetModelState.h  GetPhysicsProperties.h  GetWorldProperties.h  JointRequest.h  LinkState.h  LinkStates.h  ModelState.h  ModelStates.h  SetJointProperties.h  SetJointTrajectory.h  SetLinkProperties.h  SetLinkState.h  SetModelConfiguration.h  SetModelState.h  SetPhysicsProperties.h  SpawnModel.h  WorldState.h
lib/ros_lib/geometry_msgs/: PoseWithCovariance.h  TransformStamped.h  TwistWithCovariance.h
lib/ros_lib/move_base_msgs/: MoveBaseAction.h  MoveBaseActionFeedback.h  MoveBaseActionGoal.h  MoveBaseActionResult.h  MoveBaseFeedback.h  MoveBaseGoal.h  MoveBaseResult.h
lib/ros_lib/nav_msgs/: Odometry.h
lib/ros_lib/navfn/: MakeNavPlan.h  SetCostmap.h
lib/ros_lib/nodelet/: NodeletList.h  NodeletLoad.h  NodeletUnload.h
lib/ros_lib/polled_camera/: GetPolledImage.h
lib/ros_lib/robot_pose_ekf/: GetStatus.h
lib/ros_lib/roscpp/: Logger.h  SetLoggerLevel.h
lib/ros_lib/rosgraph_msgs/: Log.h
lib/ros_lib/rospy_tutorials/: HeaderString.h
lib/ros_lib/rosserial_arduino/: Test.h
lib/ros_lib/rosserial_msgs/: Log.h  RequestMessageInfo.h  RequestParam.h  TopicInfo.h
lib/ros_lib/sensor_msgs/: CameraInfo.h  ChannelFloat32.h  CompressedImage.h  Image.h  Imu.h  JointState.h  MagneticField.h  MultiDOFJointState.h  NavSatFix.h  PointField.h  SetCameraInfo.h  TimeReference.h
lib/ros_lib/shape_msgs/: MeshTriangle.h  Plane.h
lib/ros_lib/smach_msgs/: SmachContainerInitialStatusCmd.h  SmachContainerStatus.h  SmachContainerStructure.h
lib/ros_lib/std_msgs/: Header.h  MultiArrayDimension.h  String.h
lib/ros_lib/tf/: FrameGraph.h  transform_broadcaster.h
lib/ros_lib/tf2_msgs/: FrameGraph.h  LookupTransformGoal.h  TF2Error.h
lib/ros_lib/topic_tools/: MuxAdd.h  MuxDelete.h  MuxList.h  MuxSelect.h
schematic/: OpenBLDCgerbers.7z  bldcshield.GBL  bldcshield.GBO  bldcshield.GBP  bldcshield.GBS  bldcshield.GML  bldcshield.GTL  bldcshield.GTO  bldcshield.GTP  bldcshield.GTS  bldcshield.TXT  bldcshield.b#1  bldcshield.b#2  bldcshield.b#3  bldcshield.b#4  bldcshield.b#5  bldcshield.b#6  bldcshield.b#7  bldcshield.b#8  bldcshield.b#9  bldcshield.brd  bldcshield.cmp  bldcshield.dri  bldcshield.gpi  bldcshield.plc  bldcshield.pro  bldcshield.s#1  bldcshield.s#2  bldcshield.s#3  bldcshield.s#4  bldcshield.s#5  bldcshield.s#6  bldcshield.s#7  bldcshield.s#8  bldcshield.s#9  bldcshield.sch  bldcshield.sol  bldcshield.stc  bldcshield.sts  bldcshield_00.job  (+3 more)
schematic/integrated_controller/: Micro_BLDC.brd  Micro__BLDC.b#1  Micro__BLDC.b#2  Micro__BLDC.b#3  Micro__BLDC.b#4  Micro__BLDC.b#5  Micro__BLDC.b#6  Micro__BLDC.b#7  Micro__BLDC.b#8  Micro__BLDC.b#9  Micro__BLDC.brd  Micro__BLDC.s#1  Micro__BLDC.s#2  Micro__BLDC.s#3  Micro__BLDC.s#4  Micro__BLDC.s#5  Micro__BLDC.s#6  Micro__BLDC.s#7  Micro__BLDC.s#8  Micro__BLDC.s#9  Micro__BLDC.sch
schematic/recon_switcher/: bldcshield.GBL  bldcshield.GBO  bldcshield.GBP  bldcshield.GBS  bldcshield.GML  bldcshield.GTL  bldcshield.GTO  bldcshield.GTP  bldcshield.GTS  bldcshield.TXT  bldcshield.b#1  bldcshield.b#2  bldcshield.brd  bldcshield.dri  bldcshield.gpi  bldcshield.sch
schematic/version_5/: bldcshield.GBL  bldcshield.GBO  bldcshield.GBS  bldcshield.GTL  bldcshield.GTO  bldcshield.GTS  bldcshield.TXT
schematic2/: readme.txt  two_pieceboard_1.brd  two_pieceboard_1.sch  two_pieceboard_2.GBL  two_pieceboard_2.GBO  two_pieceboard_2.GBP  two_pieceboard_2.GBS  two_pieceboard_2.GML  two_pieceboard_2.GTL  two_pieceboard_2.GTO  two_pieceboard_2.GTP  two_pieceboard_2.GTS  two_pieceboard_2.TXT  two_pieceboard_2.b#1  two_pieceboard_2.b#2  two_pieceboard_2.b#3  two_pieceboard_2.b#4  two_pieceboard_2.brd  two_pieceboard_2.dri  two_pieceboard_2.gpi  two_pieceboard_2.s##  two_pieceboard_2.s#1  two_pieceboard_2.s#2  two_pieceboard_2.s#3  two_pieceboard_2.s#5  two_pieceboard_2.sch
schematic2/NUCLEO-144pins_Altium_Schematics-Layout/: MB1137.PrjPCB
schematic3/: simpleshield.b#1  simpleshield.b#2  simpleshield.b#3  simpleshield.b#4  simpleshield.brd  simpleshield.s#1  simpleshield.s#2  simpleshield.s#3  simpleshield.s#4  simpleshield.s#5  simpleshield.s#6  simpleshield.s#7  simpleshield.s#8  simpleshield.s#9  simpleshield.sch  simpleshield_snap.scr
source/: BLDC.h  bldc.c  bldc.cpp  bldc.h  main.c  motorshield_test.ino  readme.html
source/bldc/: bldc.cpp  bldc.h
source/doxygen/: BLDC_8h-source.html  BLDC_8h.html  BLDC_8h__dep__incl.map  BLDC_8h__dep__incl.md5  files.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  main.html  main_8c-source.html  main_8c.html  main_8c__incl.map  main_8c__incl.md5  main_8c_a12_cgraph.map  main_8c_a12_cgraph.md5  main_8c_a20_cgraph.map  main_8c_a20_cgraph.md5  main_8c_a32_cgraph.map  main_8c_a32_cgraph.md5  main_8c_a33_cgraph.map  main_8c_a33_cgraph.md5  tree.html
source/motorshield_test/: motorshield_test.ino
wheel/: wheel data.txt
(+13 files in other folders)
