cmake_minimum_required(VERSION 3.5)
project(BLDC_ros_controller)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    lib/ros_lib/actionlib/TestAction.h
    lib/ros_lib/actionlib/TestActionFeedback.h
    lib/ros_lib/actionlib/TestActionGoal.h
    lib/ros_lib/actionlib/TestActionResult.h
    lib/ros_lib/actionlib/TestFeedback.h
    lib/ros_lib/actionlib/TestGoal.h
    lib/ros_lib/actionlib/TestRequestAction.h
    lib/ros_lib/actionlib/TestRequestActionFeedback.h
    lib/ros_lib/actionlib/TestRequestActionGoal.h
    lib/ros_lib/actionlib/TestRequestActionResult.h
    lib/ros_lib/actionlib/TestRequestFeedback.h
    lib/ros_lib/actionlib/TestRequestGoal.h
    lib/ros_lib/actionlib/TestRequestResult.h
    lib/ros_lib/actionlib/TestResult.h
    lib/ros_lib/actionlib/TwoIntsAction.h
    lib/ros_lib/actionlib/TwoIntsActionFeedback.h
    lib/ros_lib/actionlib/TwoIntsActionGoal.h
    lib/ros_lib/actionlib/TwoIntsActionResult.h
    lib/ros_lib/actionlib/TwoIntsFeedback.h
    lib/ros_lib/actionlib/TwoIntsGoal.h
    lib/ros_lib/actionlib/TwoIntsResult.h
    lib/ros_lib/actionlib_msgs/GoalID.h
    lib/ros_lib/actionlib_msgs/GoalStatus.h
    lib/ros_lib/actionlib_msgs/GoalStatusArray.h
    lib/ros_lib/actionlib_tutorials/AveragingAction.h
    lib/ros_lib/actionlib_tutorials/AveragingActionFeedback.h
    lib/ros_lib/actionlib_tutorials/AveragingActionGoal.h
    lib/ros_lib/actionlib_tutorials/AveragingActionResult.h
    lib/ros_lib/actionlib_tutorials/AveragingFeedback.h
    lib/ros_lib/actionlib_tutorials/AveragingGoal.h
    lib/ros_lib/actionlib_tutorials/AveragingResult.h
    lib/ros_lib/actionlib_tutorials/FibonacciAction.h
    lib/ros_lib/actionlib_tutorials/FibonacciActionFeedback.h
    lib/ros_lib/actionlib_tutorials/FibonacciActionGoal.h
    lib/ros_lib/actionlib_tutorials/FibonacciActionResult.h
    lib/ros_lib/actionlib_tutorials/FibonacciFeedback.h
    lib/ros_lib/actionlib_tutorials/FibonacciGoal.h
    lib/ros_lib/actionlib_tutorials/FibonacciResult.h
    lib/ros_lib/base_local_planner/Position2DInt.h
    lib/ros_lib/bond/Constants.h
    lib/ros_lib/bond/Status.h
    lib/ros_lib/control_msgs/FollowJointTrajectoryAction.h
    lib/ros_lib/control_msgs/FollowJointTrajectoryActionFeedback.h
    lib/ros_lib/control_msgs/FollowJointTrajectoryActionGoal.h
    lib/ros_lib/control_msgs/FollowJointTrajectoryActionResult.h
    lib/ros_lib/control_msgs/FollowJointTrajectoryFeedback.h
    lib/ros_lib/control_msgs/FollowJointTrajectoryGoal.h
    lib/ros_lib/control_msgs/FollowJointTrajectoryResult.h
    lib/ros_lib/control_msgs/GripperCommand.h
    lib/ros_lib/control_msgs/GripperCommandAction.h
    lib/ros_lib/control_msgs/GripperCommandActionFeedback.h
    lib/ros_lib/control_msgs/GripperCommandActionGoal.h
    lib/ros_lib/control_msgs/GripperCommandActionResult.h
    lib/ros_lib/control_msgs/GripperCommandFeedback.h
    lib/ros_lib/control_msgs/GripperCommandGoal.h
    lib/ros_lib/control_msgs/GripperCommandResult.h
    lib/ros_lib/control_msgs/JointControllerState.h
    lib/ros_lib/control_msgs/JointTolerance.h
    lib/ros_lib/control_msgs/JointTrajectoryAction.h
    lib/ros_lib/control_msgs/JointTrajectoryActionFeedback.h
    lib/ros_lib/control_msgs/JointTrajectoryActionGoal.h
    lib/ros_lib/control_msgs/JointTrajectoryActionResult.h
    lib/ros_lib/control_msgs/JointTrajectoryControllerState.h
    lib/ros_lib/control_msgs/JointTrajectoryFeedback.h
    lib/ros_lib/control_msgs/JointTrajectoryGoal.h
    lib/ros_lib/control_msgs/JointTrajectoryResult.h
    lib/ros_lib/control_msgs/PointHeadAction.h
    lib/ros_lib/control_msgs/PointHeadActionFeedback.h
    lib/ros_lib/control_msgs/PointHeadActionGoal.h
    lib/ros_lib/control_msgs/PointHeadActionResult.h
    lib/ros_lib/control_msgs/PointHeadFeedback.h
    lib/ros_lib/control_msgs/PointHeadGoal.h
    lib/ros_lib/control_msgs/PointHeadResult.h
    lib/ros_lib/control_msgs/QueryCalibrationState.h
    lib/ros_lib/control_msgs/QueryTrajectoryState.h
    lib/ros_lib/control_msgs/SingleJointPositionAction.h
    lib/ros_lib/control_msgs/SingleJointPositionActionFeedback.h
    lib/ros_lib/control_msgs/SingleJointPositionActionGoal.h
    lib/ros_lib/control_msgs/SingleJointPositionActionResult.h
    lib/ros_lib/control_msgs/SingleJointPositionFeedback.h
    lib/ros_lib/control_msgs/SingleJointPositionGoal.h
    lib/ros_lib/control_msgs/SingleJointPositionResult.h
    lib/ros_lib/costmap_2d/VoxelGrid.h
    lib/ros_lib/diagnostic_msgs/DiagnosticArray.h
    lib/ros_lib/diagnostic_msgs/DiagnosticStatus.h
    lib/ros_lib/diagnostic_msgs/KeyValue.h
    lib/ros_lib/diagnostic_msgs/SelfTest.h
    lib/ros_lib/driver_base/ConfigString.h
    lib/ros_lib/driver_base/ConfigValue.h
    lib/ros_lib/driver_base/SensorLevels.h
    lib/ros_lib/dynamic_reconfigure/BoolParameter.h
    lib/ros_lib/dynamic_reconfigure/Config.h
    lib/ros_lib/dynamic_reconfigure/ConfigDescription.h
    lib/ros_lib/dynamic_reconfigure/DoubleParameter.h
    lib/ros_lib/dynamic_reconfigure/Group.h
    lib/ros_lib/dynamic_reconfigure/GroupState.h
    lib/ros_lib/dynamic_reconfigure/IntParameter.h
    lib/ros_lib/dynamic_reconfigure/ParamDescription.h
    lib/ros_lib/dynamic_reconfigure/Reconfigure.h
    lib/ros_lib/dynamic_reconfigure/SensorLevels.h
    lib/ros_lib/dynamic_reconfigure/StrParameter.h
    lib/ros_lib/examples/BlinkM/BlinkM_funcs.h
    lib/ros_lib/gazebo_msgs/ApplyBodyWrench.h
    lib/ros_lib/gazebo_msgs/ApplyJointEffort.h
    lib/ros_lib/gazebo_msgs/BodyRequest.h
    lib/ros_lib/gazebo_msgs/ContactsState.h
    lib/ros_lib/gazebo_msgs/ContactState.h
    lib/ros_lib/gazebo_msgs/DeleteModel.h
    lib/ros_lib/gazebo_msgs/GetJointProperties.h
    lib/ros_lib/gazebo_msgs/GetLinkProperties.h
    lib/ros_lib/gazebo_msgs/GetLinkState.h
    lib/ros_lib/gazebo_msgs/GetModelProperties.h
    lib/ros_lib/gazebo_msgs/GetModelState.h
    lib/ros_lib/gazebo_msgs/GetPhysicsProperties.h
    lib/ros_lib/gazebo_msgs/GetWorldProperties.h
    lib/ros_lib/gazebo_msgs/JointRequest.h
    lib/ros_lib/gazebo_msgs/LinkState.h
    lib/ros_lib/gazebo_msgs/LinkStates.h
    lib/ros_lib/gazebo_msgs/ModelState.h
    lib/ros_lib/gazebo_msgs/ModelStates.h
    lib/ros_lib/gazebo_msgs/ODEJointProperties.h
    lib/ros_lib/gazebo_msgs/ODEPhysics.h
    lib/ros_lib/gazebo_msgs/SetJointProperties.h
    lib/ros_lib/gazebo_msgs/SetJointTrajectory.h
    lib/ros_lib/gazebo_msgs/SetLinkProperties.h
    lib/ros_lib/gazebo_msgs/SetLinkState.h
    lib/ros_lib/gazebo_msgs/SetModelConfiguration.h
    lib/ros_lib/gazebo_msgs/SetModelState.h
    lib/ros_lib/gazebo_msgs/SetPhysicsProperties.h
    lib/ros_lib/gazebo_msgs/SpawnModel.h
    lib/ros_lib/gazebo_msgs/WorldState.h
    lib/ros_lib/geometry_msgs/Point.h
    lib/ros_lib/geometry_msgs/Point32.h
    lib/ros_lib/geometry_msgs/PointStamped.h
    lib/ros_lib/geometry_msgs/Polygon.h
    lib/ros_lib/geometry_msgs/PolygonStamped.h
    lib/ros_lib/geometry_msgs/Pose.h
    lib/ros_lib/geometry_msgs/Pose2D.h
    lib/ros_lib/geometry_msgs/PoseArray.h
    lib/ros_lib/geometry_msgs/PoseStamped.h
    lib/ros_lib/geometry_msgs/PoseWithCovariance.h
    lib/ros_lib/geometry_msgs/PoseWithCovarianceStamped.h
    lib/ros_lib/geometry_msgs/Quaternion.h
    lib/ros_lib/geometry_msgs/QuaternionStamped.h
    lib/ros_lib/geometry_msgs/Transform.h
    lib/ros_lib/geometry_msgs/TransformStamped.h
    lib/ros_lib/geometry_msgs/Twist.h
    lib/ros_lib/geometry_msgs/TwistStamped.h
    lib/ros_lib/geometry_msgs/TwistWithCovariance.h
    lib/ros_lib/geometry_msgs/TwistWithCovarianceStamped.h
    lib/ros_lib/geometry_msgs/Vector3.h
    lib/ros_lib/geometry_msgs/Vector3Stamped.h
    lib/ros_lib/geometry_msgs/Wrench.h
    lib/ros_lib/geometry_msgs/WrenchStamped.h
    lib/ros_lib/laser_assembler/AssembleScans.h
    lib/ros_lib/laser_assembler/AssembleScans2.h
    lib/ros_lib/move_base_msgs/MoveBaseAction.h
    lib/ros_lib/move_base_msgs/MoveBaseActionFeedback.h
    lib/ros_lib/move_base_msgs/MoveBaseActionGoal.h
    lib/ros_lib/move_base_msgs/MoveBaseActionResult.h
    lib/ros_lib/move_base_msgs/MoveBaseFeedback.h
    lib/ros_lib/move_base_msgs/MoveBaseGoal.h
    lib/ros_lib/move_base_msgs/MoveBaseResult.h
    lib/ros_lib/nav_msgs/GetMap.h
    lib/ros_lib/nav_msgs/GetMapAction.h
    lib/ros_lib/nav_msgs/GetMapActionFeedback.h
    lib/ros_lib/nav_msgs/GetMapActionGoal.h
    lib/ros_lib/nav_msgs/GetMapActionResult.h
    lib/ros_lib/nav_msgs/GetMapFeedback.h
    lib/ros_lib/nav_msgs/GetMapGoal.h
    lib/ros_lib/nav_msgs/GetMapResult.h
    lib/ros_lib/nav_msgs/GetPlan.h
    lib/ros_lib/nav_msgs/GridCells.h
    lib/ros_lib/nav_msgs/MapMetaData.h
    lib/ros_lib/nav_msgs/OccupancyGrid.h
    lib/ros_lib/nav_msgs/Odometry.h
    lib/ros_lib/nav_msgs/Path.h
    lib/ros_lib/navfn/MakeNavPlan.h
    lib/ros_lib/navfn/SetCostmap.h
    lib/ros_lib/nodelet/NodeletList.h
    lib/ros_lib/nodelet/NodeletLoad.h
    lib/ros_lib/nodelet/NodeletUnload.h
    lib/ros_lib/pcl_msgs/ModelCoefficients.h
    lib/ros_lib/pcl_msgs/PointIndices.h
    lib/ros_lib/pcl_msgs/PolygonMesh.h
    lib/ros_lib/pcl_msgs/Vertices.h
    lib/ros_lib/polled_camera/GetPolledImage.h
    lib/ros_lib/robot_pose_ekf/GetStatus.h
    lib/ros_lib/ros/duration.h
    lib/ros_lib/ros/msg.h
    lib/ros_lib/ros/node_handle.h
    lib/ros_lib/ros/publisher.h
    lib/ros_lib/ros/service_client.h
    lib/ros_lib/ros/service_server.h
    lib/ros_lib/ros/subscriber.h
    lib/ros_lib/ros/time.h
    lib/ros_lib/roscpp/Empty.h
    lib/ros_lib/roscpp/GetLoggers.h
    lib/ros_lib/roscpp/Logger.h
    lib/ros_lib/roscpp/SetLoggerLevel.h
    lib/ros_lib/roscpp_tutorials/TwoInts.h
    lib/ros_lib/rosgraph_msgs/Clock.h
    lib/ros_lib/rosgraph_msgs/Log.h
    lib/ros_lib/rospy_tutorials/AddTwoInts.h
    lib/ros_lib/rospy_tutorials/BadTwoInts.h
    lib/ros_lib/rospy_tutorials/Floats.h
    lib/ros_lib/rospy_tutorials/HeaderString.h
    lib/ros_lib/rosserial_arduino/Adc.h
    lib/ros_lib/rosserial_arduino/Test.h
    lib/ros_lib/rosserial_msgs/Log.h
    lib/ros_lib/rosserial_msgs/RequestMessageInfo.h
    lib/ros_lib/rosserial_msgs/RequestParam.h
    lib/ros_lib/rosserial_msgs/TopicInfo.h
    lib/ros_lib/sensor_msgs/CameraInfo.h
    lib/ros_lib/sensor_msgs/ChannelFloat32.h
    lib/ros_lib/sensor_msgs/CompressedImage.h
    lib/ros_lib/sensor_msgs/FluidPressure.h
    lib/ros_lib/sensor_msgs/Illuminance.h
    lib/ros_lib/sensor_msgs/Image.h
    lib/ros_lib/sensor_msgs/Imu.h
    lib/ros_lib/sensor_msgs/JointState.h
    lib/ros_lib/sensor_msgs/Joy.h
    lib/ros_lib/sensor_msgs/JoyFeedback.h
    lib/ros_lib/sensor_msgs/JoyFeedbackArray.h
    lib/ros_lib/sensor_msgs/LaserEcho.h
    lib/ros_lib/sensor_msgs/LaserScan.h
    lib/ros_lib/sensor_msgs/MagneticField.h
    lib/ros_lib/sensor_msgs/MultiDOFJointState.h
    lib/ros_lib/sensor_msgs/MultiEchoLaserScan.h
    lib/ros_lib/sensor_msgs/NavSatFix.h
    lib/ros_lib/sensor_msgs/NavSatStatus.h
    lib/ros_lib/sensor_msgs/PointCloud.h
    lib/ros_lib/sensor_msgs/PointCloud2.h
    lib/ros_lib/sensor_msgs/PointField.h
    lib/ros_lib/sensor_msgs/Range.h
    lib/ros_lib/sensor_msgs/RegionOfInterest.h
    lib/ros_lib/sensor_msgs/RelativeHumidity.h
    lib/ros_lib/sensor_msgs/SetCameraInfo.h
    lib/ros_lib/sensor_msgs/Temperature.h
    lib/ros_lib/sensor_msgs/TimeReference.h
    lib/ros_lib/shape_msgs/Mesh.h
    lib/ros_lib/shape_msgs/MeshTriangle.h
    lib/ros_lib/shape_msgs/Plane.h
    lib/ros_lib/shape_msgs/SolidPrimitive.h
    lib/ros_lib/smach_msgs/SmachContainerInitialStatusCmd.h
    lib/ros_lib/smach_msgs/SmachContainerStatus.h
    lib/ros_lib/smach_msgs/SmachContainerStructure.h
    lib/ros_lib/std_msgs/Bool.h
    lib/ros_lib/std_msgs/Byte.h
    lib/ros_lib/std_msgs/ByteMultiArray.h
    lib/ros_lib/std_msgs/Char.h
    lib/ros_lib/std_msgs/ColorRGBA.h
    lib/ros_lib/std_msgs/Duration.h
    lib/ros_lib/std_msgs/Empty.h
    lib/ros_lib/std_msgs/Float32.h
    lib/ros_lib/std_msgs/Float32MultiArray.h
    lib/ros_lib/std_msgs/Float64.h
    lib/ros_lib/std_msgs/Float64MultiArray.h
    lib/ros_lib/std_msgs/Header.h
    lib/ros_lib/std_msgs/Int16.h
    lib/ros_lib/std_msgs/Int16MultiArray.h
    lib/ros_lib/std_msgs/Int32.h
    lib/ros_lib/std_msgs/Int32MultiArray.h
    lib/ros_lib/std_msgs/Int64.h
    lib/ros_lib/std_msgs/Int64MultiArray.h
    lib/ros_lib/std_msgs/Int8.h
    lib/ros_lib/std_msgs/Int8MultiArray.h
    lib/ros_lib/std_msgs/MultiArrayDimension.h
    lib/ros_lib/std_msgs/MultiArrayLayout.h
    lib/ros_lib/std_msgs/String.h
    lib/ros_lib/std_msgs/Time.h
    lib/ros_lib/std_msgs/UInt16.h
    lib/ros_lib/std_msgs/UInt16MultiArray.h
    lib/ros_lib/std_msgs/UInt32.h
    lib/ros_lib/std_msgs/UInt32MultiArray.h
    lib/ros_lib/std_msgs/UInt64.h
    lib/ros_lib/std_msgs/UInt64MultiArray.h
    lib/ros_lib/std_msgs/UInt8.h
    lib/ros_lib/std_msgs/UInt8MultiArray.h
    lib/ros_lib/std_srvs/Empty.h
    lib/ros_lib/stereo_msgs/DisparityImage.h
    lib/ros_lib/tf/FrameGraph.h
    lib/ros_lib/tf/tf.h
    lib/ros_lib/tf/tfMessage.h
    lib/ros_lib/tf/transform_broadcaster.h
    lib/ros_lib/tf2_msgs/FrameGraph.h
    lib/ros_lib/tf2_msgs/LookupTransformAction.h
    lib/ros_lib/tf2_msgs/LookupTransformActionFeedback.h
    lib/ros_lib/tf2_msgs/LookupTransformActionGoal.h
    lib/ros_lib/tf2_msgs/LookupTransformActionResult.h
    lib/ros_lib/tf2_msgs/LookupTransformFeedback.h
    lib/ros_lib/tf2_msgs/LookupTransformGoal.h
    lib/ros_lib/tf2_msgs/LookupTransformResult.h
    lib/ros_lib/tf2_msgs/TF2Error.h
    lib/ros_lib/tf2_msgs/TFMessage.h
    lib/ros_lib/theora_image_transport/Packet.h
    lib/ros_lib/topic_tools/MuxAdd.h
    lib/ros_lib/topic_tools/MuxDelete.h
    lib/ros_lib/topic_tools/MuxList.h
    lib/ros_lib/topic_tools/MuxSelect.h
    lib/ros_lib/trajectory_msgs/JointTrajectory.h
    lib/ros_lib/trajectory_msgs/JointTrajectoryPoint.h
    lib/ros_lib/trajectory_msgs/MultiDOFJointTrajectory.h
    lib/ros_lib/trajectory_msgs/MultiDOFJointTrajectoryPoint.h
    lib/ros_lib/turtle_actionlib/ShapeAction.h
    lib/ros_lib/turtle_actionlib/ShapeActionFeedback.h
    lib/ros_lib/turtle_actionlib/ShapeActionGoal.h
    lib/ros_lib/turtle_actionlib/ShapeActionResult.h
    lib/ros_lib/turtle_actionlib/ShapeFeedback.h
    lib/ros_lib/turtle_actionlib/ShapeGoal.h
    lib/ros_lib/turtle_actionlib/ShapeResult.h
    lib/ros_lib/turtle_actionlib/Velocity.h
    lib/ros_lib/turtlesim/Color.h
    lib/ros_lib/turtlesim/Kill.h
    lib/ros_lib/turtlesim/Pose.h
    lib/ros_lib/turtlesim/SetPen.h
    lib/ros_lib/turtlesim/Spawn.h
    lib/ros_lib/turtlesim/TeleportAbsolute.h
    lib/ros_lib/turtlesim/TeleportRelative.h
    lib/ros_lib/visualization_msgs/ImageMarker.h
    lib/ros_lib/visualization_msgs/InteractiveMarker.h
    lib/ros_lib/visualization_msgs/InteractiveMarkerControl.h
    lib/ros_lib/visualization_msgs/InteractiveMarkerFeedback.h
    lib/ros_lib/visualization_msgs/InteractiveMarkerInit.h
    lib/ros_lib/visualization_msgs/InteractiveMarkerPose.h
    lib/ros_lib/visualization_msgs/InteractiveMarkerUpdate.h
    lib/ros_lib/visualization_msgs/Marker.h
    lib/ros_lib/visualization_msgs/MarkerArray.h
    lib/ros_lib/visualization_msgs/MenuEntry.h
    lib/ros_lib/ArduinoHardware.h
    lib/ros_lib/duration.cpp
    lib/ros_lib/ros.h
    lib/ros_lib/time.cpp
    lib/SoftPWM/SoftPWM.cpp
    lib/SoftPWM/SoftPWM.h
    lib/SoftPWM/SoftPWM_timer.h
    source/motorshield_test/motorshield_test.ino
    source/bldc.cpp
    source/bldc.h)

include_directories(lib/SoftPWM)

add_executable(BLDC_ros_controller ${SOURCE_FILES})